--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ ul.main-mn {
 		width: 100%;
 		padding-left: 35px;
 		padding-right: 35px;
-		padding-top: 30px;
+		padding-top: 90px;
 	}
 	.container .row {
 		width: 100% !important;
@@ -205,7 +205,7 @@ ul.main-mn {
 		display: flex;
 	}
 	.manage .col-4, .trustby, .boost .row{
-		text-align: center;
+		text-align: center !important;
 	}
 	.companies{
 		padding-top: 50px;
@@ -220,8 +220,8 @@ ul.main-mn {
 	.content{
 		display: flex !important;
 	}
-	.pad{
-		padding: 30px 0;
+	.row .pad{
+		padding: 30px 0px;
 		text-align: center;
 	}
   }
@@ -240,6 +240,9 @@ ul.main-mn {
 	/* .companies{
 		padding-top: 50px;
 	} */
+	.manage .col-4{
+		text-align: left !important;
+	}
 	.trustby{
 		text-align: left;
 	}
@@ -257,6 +260,15 @@ ul.main-mn {
 	}
 	.business .col-33{
 		display: block;
+	}
+	#email {
+		width: 100%;	
+		border-radius: 50px !important;
+	}
+	#submit {
+		width: 100%;
+		margin-left: 0px;
+		margin-top: 25px;
 	}
 	
 }
