--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ ul.main-mn {
 		text-align: left !important;
 	}
 	.trustby{
-		text-align: left;
+		text-align: left !important;
 	}
 	.brand{
 		display: block;
